added controller exams.js
